@@ -13,9 +13,14 @@ namespace Gphoto2.Base
             this.handle = new HandleRef (this, native);
         }
         
-        protected override void Cleanup ()
+        protected override void Dispose (bool disposing)
         {
-            gp_list_unref (handle);
+            if(!Disposed)
+            {
+                // Don't check the error as we don't want to throw an exception if it fails
+                gp_list_unref (handle);
+                base.Dispose(disposing);
+            }
         }
         
         public int Count ()
@@ -73,9 +78,9 @@ namespace Gphoto2.Base
         
         public int GetPosition (string name, string value)
         {
-			// Cache the value of count to reduce the number of calls needed
-			// to native code. Is there a need to check both the name and value?
-			int count = Count ();
+            // Cache the value of count to reduce the number of calls needed
+            // to native code. Is there a need to check both the name and value?
+            int count = Count ();
             for (int index = 0; index < count; index++)
                 if (GetName (index) == name && GetValue (index) == value)
                     return index;
